Vezba 7/2/synsem.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: /* empty */

    5 $@2: /* empty */

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: /* empty */
    9          | type _ID

   10 body: _LBRACKET variable_list statement_list _RBRACKET

   11 variable_list: /* empty */
   12              | variable_list variable

   13 $@3: /* empty */

   14 $@4: /* empty */

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

   16 variable: type _ID _SEMICOLON

   17 statement_list: /* empty */
   18               | statement_list statement

   19 statement: compound_statement
   20          | assignment_statement
   21          | if_statement
   22          | for_statement
   23          | return_statement

   24 compound_statement: _LBRACKET statement_list _RBRACKET

   25 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   26 num_exp: exp
   27        | num_exp _AROP exp

   28 exp: literal
   29    | _ID
   30    | function_call
   31    | _LPAREN num_exp _RPAREN

   32 literal: _INT_NUMBER
   33        | _UINT_NUMBER

   34 $@5: /* empty */

   35 function_call: _ID $@5 _LPAREN argument _RPAREN

   36 argument: /* empty */
   37         | num_exp

   38 if_statement: if_part
   39             | if_part _ELSE statement

   40 if_part: _IF _LPAREN rel_exp _RPAREN statement

   41 rel_exp: num_exp _RELOP num_exp

   42 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 40
_ELSE (260) 39
_RETURN (261) 42
_ID (262) 6 9 15 16 25 29 35
_INT_NUMBER (263) 32
_UINT_NUMBER (264) 33
_LPAREN (265) 6 15 31 35 40
_RPAREN (266) 6 15 31 35 40
_LBRACKET (267) 10 24
_RBRACKET (268) 10 24
_ASSIGN (269) 15 25
_SEMICOLON (270) 15 16 25 42
_AROP (271) 27
_RELOP (272) 41
_FOR (273) 15
_INC (274) 15
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
function_list (23)
    on left: 2 3, on right: 1 3
function (24)
    on left: 6, on right: 2 3
$@1 (25)
    on left: 4, on right: 6
$@2 (26)
    on left: 5, on right: 6
type (27)
    on left: 7, on right: 6 9 15 16
parameter (28)
    on left: 8 9, on right: 6
body (29)
    on left: 10, on right: 6
variable_list (30)
    on left: 11 12, on right: 10 12
for_statement (31)
    on left: 15, on right: 22
$@3 (32)
    on left: 13, on right: 15
$@4 (33)
    on left: 14, on right: 15
variable (34)
    on left: 16, on right: 12
statement_list (35)
    on left: 17 18, on right: 10 18 24
statement (36)
    on left: 19 20 21 22 23, on right: 15 18 39 40
compound_statement (37)
    on left: 24, on right: 19
assignment_statement (38)
    on left: 25, on right: 20
num_exp (39)
    on left: 26 27, on right: 25 27 31 37 41 42
exp (40)
    on left: 28 29 30 31, on right: 26 27
literal (41)
    on left: 32 33, on right: 15 28
function_call (42)
    on left: 35, on right: 30
$@5 (43)
    on left: 34, on right: 35
argument (44)
    on left: 36 37, on right: 35
if_statement (45)
    on left: 38 39, on right: 21
if_part (46)
    on left: 40, on right: 38 39
rel_exp (47)
    on left: 41, on right: 15 40
return_statement (48)
    on left: 42, on right: 23


state 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


state 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


state 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


state 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


state 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


state 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


state 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


state 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


state 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


state 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


state 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


state 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


state 16

   10 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 18


state 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


state 18

   10 body: _LBRACKET variable_list . statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 17 (statement_list)

    type            go to state 19
    variable        go to state 20
    statement_list  go to state 21


state 19

   16 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


state 20

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


state 21

   10 body: _LBRACKET variable_list statement_list . _RBRACKET
   18 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27
    _FOR       shift, and go to state 28

    for_statement         go to state 29
    statement             go to state 30
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


state 22

   16 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 36


state 23

   40 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 37


state 24

   42 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 42
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


state 25

   25 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 46


state 26

   24 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 47


state 27

   10 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


state 28

   15 for_statement: _FOR . _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _LPAREN  shift, and go to state 48


state 29

   22 statement: for_statement .

    $default  reduce using rule 22 (statement)


state 30

   18 statement_list: statement_list statement .

    $default  reduce using rule 18 (statement_list)


state 31

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


state 32

   20 statement: assignment_statement .

    $default  reduce using rule 20 (statement)


state 33

   21 statement: if_statement .

    $default  reduce using rule 21 (statement)


state 34

   38 if_statement: if_part .
   39             | if_part . _ELSE statement

    _ELSE  shift, and go to state 49

    $default  reduce using rule 38 (if_statement)


state 35

   23 statement: return_statement .

    $default  reduce using rule 23 (statement)


state 36

   16 variable: type _ID _SEMICOLON .

    $default  reduce using rule 16 (variable)


state 37

   40 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 50
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    rel_exp        go to state 51


state 38

   29 exp: _ID .
   35 function_call: _ID . $@5 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 34 ($@5)
    $default  reduce using rule 29 (exp)

    $@5  go to state 52


state 39

   32 literal: _INT_NUMBER .

    $default  reduce using rule 32 (literal)


state 40

   33 literal: _UINT_NUMBER .

    $default  reduce using rule 33 (literal)


state 41

   31 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 53
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


state 42

   27 num_exp: num_exp . _AROP exp
   42 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 54
    _AROP       shift, and go to state 55


state 43

   26 num_exp: exp .

    $default  reduce using rule 26 (num_exp)


state 44

   28 exp: literal .

    $default  reduce using rule 28 (exp)


state 45

   30 exp: function_call .

    $default  reduce using rule 30 (exp)


state 46

   25 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 56
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


state 47

   18 statement_list: statement_list . statement
   24 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 57
    _FOR       shift, and go to state 28

    for_statement         go to state 29
    statement             go to state 30
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


state 48

   15 for_statement: _FOR _LPAREN . type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _TYPE  shift, and go to state 1

    type  go to state 58


state 49

   39 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28

    for_statement         go to state 29
    statement             go to state 59
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


state 50

   27 num_exp: num_exp . _AROP exp
   41 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 55
    _RELOP  shift, and go to state 60


state 51

   40 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 61


state 52

   35 function_call: _ID $@5 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 62


state 53

   27 num_exp: num_exp . _AROP exp
   31 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 63
    _AROP    shift, and go to state 55


state 54

   42 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 42 (return_statement)


state 55

   27 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    exp            go to state 64
    literal        go to state 44
    function_call  go to state 45


state 56

   25 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   27 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 65
    _AROP       shift, and go to state 55


state 57

   24 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 24 (compound_statement)


state 58

   15 for_statement: _FOR _LPAREN type . _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _ID  shift, and go to state 66


state 59

   39 if_statement: if_part _ELSE statement .

    $default  reduce using rule 39 (if_statement)


state 60

   41 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 67
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


state 61

   40 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28

    for_statement         go to state 29
    statement             go to state 68
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


state 62

   35 function_call: _ID $@5 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    $default  reduce using rule 36 (argument)

    num_exp        go to state 69
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    argument       go to state 70


state 63

   31 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 31 (exp)


state 64

   27 num_exp: num_exp _AROP exp .

    $default  reduce using rule 27 (num_exp)


state 65

   25 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 25 (assignment_statement)


state 66

   15 for_statement: _FOR _LPAREN type _ID . $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    $default  reduce using rule 13 ($@3)

    $@3  go to state 71


state 67

   27 num_exp: num_exp . _AROP exp
   41 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 41 (rel_exp)


state 68

   40 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 40 (if_part)


state 69

   27 num_exp: num_exp . _AROP exp
   37 argument: num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 37 (argument)


state 70

   35 function_call: _ID $@5 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 72


state 71

   15 for_statement: _FOR _LPAREN type _ID $@3 . _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _ASSIGN  shift, and go to state 73


state 72

   35 function_call: _ID $@5 _LPAREN argument _RPAREN .

    $default  reduce using rule 35 (function_call)


state 73

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN . literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40

    literal  go to state 74


state 74

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal . _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _SEMICOLON  shift, and go to state 75


state 75

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON . rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 50
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    rel_exp        go to state 76


state 76

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp . _SEMICOLON _ID _INC _RPAREN $@4 statement

    _SEMICOLON  shift, and go to state 77


state 77

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON . _ID _INC _RPAREN $@4 statement

    _ID  shift, and go to state 78


state 78

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID . _INC _RPAREN $@4 statement

    _INC  shift, and go to state 79


state 79

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC . _RPAREN $@4 statement

    _RPAREN  shift, and go to state 80


state 80

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN . $@4 statement

    $default  reduce using rule 14 ($@4)

    $@4  go to state 81


state 81

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28

    for_statement         go to state 29
    statement             go to state 82
    compound_statement    go to state 31
    assignment_statement  go to state 32
    if_statement          go to state 33
    if_part               go to state 34
    return_statement      go to state 35


state 82

   15 for_statement: _FOR _LPAREN type _ID $@3 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN $@4 statement .

    $default  reduce using rule 15 (for_statement)
